5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1577_1332.log
== TEST (2019-03-21 18:24:45) 
-- CODE:
aresta =5
area =3/2(3*5**2)**0.5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(3*5**2)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:03) 
-- CODE:
aresta =5
area =3/2(3*5**2)**0.5
 
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(3*5**2)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:35) 
-- CODE:
aresta =5
area =3/2(3*5**2)**0.5
a=5
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(3*5**2)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:07) 
-- CODE:
aresta =5
area =3/2(3*5**2)**0.5
a=5
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(3*5**2)**0.5
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:28:40) 
-- CODE:
aresta =5
area = 3/2*3**0.5*a*a
a=5
print(round(area,5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*3**0.5*a*a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:29:01) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a

print(round(area,5))
-- OUTPUT:
64.95191
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:08) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a

print(round(area,5))
-- EXECUTION TIME:
0.11915
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.95191
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:13) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a

print(round(area,5))
-- EXECUTION TIME:
0.184707
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.95191
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:56) 
-- CODE:
a =5
area = 3/2*3**0.5*a*a

print(round(area,4 ))
-- EXECUTION TIME:
0.185972
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
